--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Biblio.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -41,8 +42,8 @@
     </div>
 
     <footer class="border-top footer bg-primary text-muted">
-        <div class="container">
-            &copy; 2025 - Biblio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            Made with <i class="bi bi-heart-fill"></i> by Mahmoud Ramadan
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
