--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,5 +1,9 @@
 @model List<Category>
 
+@if (TempData["success"] != null){
+    <h2>@TempData["success"]</h2>
+}
+
 <div class="container">
     <div class="row pt-4">
         <div class="col-6">
@@ -20,6 +24,7 @@
             <tr>
                 <th>Category Name</th>
                 <th>Display Order</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +32,16 @@
             <tr>
                 <td>@obj.Name</td>
                 <td>@obj.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                        <i class="bi bi-pencil-square">Edit</i>
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                        <i class="bi bi-trash3">Delete</i>
+                        </a>
+                    </div>
+                </td>
             </tr>
             }
         </tbody>
